# Fact-Checking-API

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-healthcheck.py  docker-pre-build-check.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_server.py  veridika_server.py
awq-compressor/: build_dataset.ipynb  latxa70b_w4a16.py  latxa70b_w4a4_fp4.py  latxa70b_w8a8_fp8.py  latxa8b_w4a16.py  latxa8b_w4a4_fp4.py  latxa8b_w8a8_fp8.py  latxa_qwen3_vl_2b_w4a16.py  latxa_qwen3_vl_2b_w4a4_fp4.py  latxa_qwen3_vl_2b_w8a8_fp8.py  latxa_qwen3_vl_4b_w4a16.py  latxa_qwen3_vl_4b_w4a4_fp4.py  latxa_qwen3_vl_4b_w8a8_fp8.py  run_all.sh  run_all_Latxa_VL.sh
configs/evaluator_configs/: pipeline_gemini_full.yaml  pipeline_gemini_rag.yaml  pipeline_gpt_full.yaml  pipeline_gpt_rag.yaml  pipeline_grok_rag.yaml  pipeline_latxa2b-vl_rag.yaml  pipeline_latxa4b-vl_rag.yaml  pipeline_latxa70b-4bit_rag.yaml  pipeline_latxa8b-4bit_rag.yaml  pipeline_latxa8b-4bit_rag_gpt.yaml  pipeline_latxa8b_rag.yaml
configs/local-model-config/: embedding-config.json  flux-config.json  llm-config.json
configs/pipeline_configs/: gemini_full.yaml  gemini_rag.yaml  gpt_full.yaml  gpt_rag.yaml  grok_rag.yaml  latxa2b_vl_rag.yaml  latxa4b_vl_rag.yaml  latxa70b_rag.yaml  latxa8b_rag.yaml  latxa8b_rag_gpt.yaml
docs/: build-and-run-docker-server.md  evaluation-results.md  fact-checking-workflow-description.md  model-quantization.md  offline-fact-checking.md  run-evaluation.md  server-specification.md  supported_models.md
evaluation_results/gemini_full/: c0000.json  c0001.json  c0002.json  c0003.json  c0004.json  c0005.json  c0006.json  c0007.json  c0008.json  c0009.json  c0010.json  c0011.json  c0012.json  c0013.json  c0014.json  c0015.json  c0016.json  c0017.json  c0018.json  c0019.json  c0020.json  c0021.json  c0022.json  c0023.json  c0024.json  c0025.json  c0026.json  c0027.json  c0028.json  c0029.json  c0030.json  c0031.json  c0032.json  c0033.json  c0034.json  c0035.json  c0036.json  c0037.json  c0038.json  c0039.json  (+263 more)
graph/: graph.py  process_logos.py
notebooks/: run_workflow.ipynb  test_stepwiseworkflow-local.ipynb  test_stepwiseworkflow.ipynb
tests/: README.md  test_citation.py  test_embeddings.py  test_jsonextractor.py  test_openrouter.py  test_rag.py  test_replicate_flux.py  test_websearch.py
veridika/src/: api.py
(+2442 files in other folders)
