[project]
name = "factchecking-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "asyncio>=4.0.0",
    "brotli>=1.1.0",
    "bs4>=0.0.2",
    "datasets>=4.1.1",
    "dotenv>=0.9.9",
    "fastapi>=0.118.2",
    "google-genai>=1.41.0",
    "goose3>=3.1.20",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain-text-splitters>=0.3.11",
    "lxml>=6.0.2",
    "lxml-html-clean>=0.4.3",
    "nest-asyncio>=1.6.0",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.2",
    "numpy>=2.3.3",
    "omegaconf>=2.3.0",
    "openai>=2.2.0",
    "psutil>=7.1.0",
    "pydantic>=2.12.0",
    "readability-lxml>=0.8.4.1",
    "redis[hiredis]>=6.4.0",
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "trafilatura>=1.6.1",
    "uvicorn>=0.37.0",
]

# ------------------------------
# Tooling configuration
# ------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "notebooks/**/.ipynb_checkpoints",
    "factchecking-server.tar",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    # Non-auto-fixable or too noisy for this codebase
    "E501",   # line too long
    "B006",   # mutable defaults (requires manual refactor)
    "B007",   # unused loop control variable name
    "B019",   # lru_cache on methods
    "B904",   # raise ... from err
    "SIM102", # nested if simplification
    "SIM105", # contextlib.suppress suggestion
    "SIM108", # prefer ternary
    "UP035",  # typing.Dict deprecation
    "UP038",  # isinstance tuple to | types
    "E741",   # ambiguous variable name
]

[tool.ruff.lint.isort]
known-first-party = ["veridika"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.nbqa]
mutate = ["ruff", "black"]
exclude = ".*/.ipynb_checkpoints/.*"

[tool.nbqa.addopts]
ruff = ["--fix"]
black = []
